# uibk_moveit_tests

./: .cproject  .project  .pydevproject  CMakeLists.txt  README  mainpage.dox  manifest.xml  package.xml  results_left.txt  results_right.txt  robot_pose_list.txt  sample-positions.txt  start_pose.txt  trajectories-all.txt
config/: postgres_server.yaml
include/: TrajectoryPlannerTester.h  io_helpers.h  plan_execution.h
launch/: household_objects.launch  ik_fk_sample.launch  ik_test.launch  ik_test.rviz
results/: output  poses.txt  res_left_ros  res_right_ros  results_left  results_right  test_poses.txt
scripts/: README  col_obj.msg  cylinder.msg  obstacle.msg  pub_scene.sh  pub_surface.sh  surface.msg
src/: TrajectoryPlannerTester.cpp  compute_test_poses.cpp  display_result_states.cpp  execute_planning_tests.cpp  ik_fk_sample.cpp  ik_tests.cpp  ik_tests_ros.cpp  pick_place.cpp  pick_place_new.cpp  plan_execution.cpp  sample_pick_place.cpp  simple_ik_trajectory_planner.cpp  test_path_trajectory_planner.cpp  test_poses.cpp  test_poses_rpy.cpp  visualize_ik_test_results.cpp
